Se agrega cliente con endpoint folio

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "apihub-cdc/fintechscore-simulacion-client-php",
-    "description": "Esta API simula la evaluación de riesgo cubriendo las necesidades de las FinTechs.",
+    "name": "apihub-cdc/fintech-score-simulacion-client-php",
+    "description": "",
     "keywords": [
         "apihub",
         "php",
@@ -8,20 +8,14 @@
         "api"
     ],
     "homepage": "http://developer.circulodecredito.com.mx",
-    "license": "proprietary",
-    "authors": [
-        {
-            "name": "APIHub and contributors",
-            "homepage": "https://github.com/APIHub-CdC"
-        }
-    ],
     "require": {
         "php": ">=5.5",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "guzzlehttp/guzzle": "^6.2",
-        "monolog/monolog": "^1.24"
+        "monolog/monolog": "^1.24",
+        "apihub-cdc/signature-manager": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -29,9 +23,9 @@
         "friendsofphp/php-cs-fixer": "~2.12"
     },
     "autoload": {
-        "psr-4": { "FintechScore\\Simulacion\\MX\\Client\\" : "lib/" }
+        "psr-4": { "FintechScoreSimulacion\\Client\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "FintechScore\\Simulacion\\MX\\Client\\" : "test/" }
+        "psr-4": { "FintechScoreSimulacion\\Client\\" : "test/" }
     }
 }
